// Copyright (c) The dgc.network
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
import "pike_state.proto";

message PikePayload {
  enum Action {
    ACTION_UNSET = 0;

    CREATE_AGENT = 1;
    UPDATE_AGENT = 2;

    CREATE_ORGANIZATION = 3;
    UPDATE_ORGANIZATION = 4;
  }

  Action action = 1;

  CreateAgentAction create_agent = 2;
  UpdateAgentAction update_agent = 3;

  CreateOrganizationAction create_organization = 4;
  UpdateOrganizationAction update_organization = 5;
}

message CreateAgentAction {
  string org_id = 1;
  string public_key = 2;
  bool active = 3;
  repeated string roles = 4;
  repeated KeyValueEntry metadata = 5;
}

message UpdateAgentAction {
  string org_id = 1;
  string public_key = 2;
  bool active = 3;
  repeated string roles = 4;
  repeated KeyValueEntry metadata = 5;
}

message CreateOrganizationAction {
  string id = 1;
  string name = 2;
  string address = 3;
  repeated KeyValueEntry metadata = 4;
}

message UpdateOrganizationAction {
  string id = 1;
  string name = 2;
  string address = 3;
  repeated KeyValueEntry metadata = 4;
}
